<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/navShippingPolicy"
    android:title="@string/shippingPolicy"
   android:visible="true"
   app:showAsAction="ifRoom"/>

  <item android:id="@+id/navReturnPolicy"
    android:title="@string/returnPolicy"
   android:visible="true"
   app:showAsAction="ifRoom"/>

  <item android:id="@+id/navAboutUs"
    android:title="@string/aboutUs"
   android:visible="true"
   app:showAsAction="ifRoom"/>

  <item android:id="@+id/navTermsAndCond"
    android:title="@string/dealsOfTheDay"
   android:visible="true"
   app:showAsAction="ifRoom"/>

  <item android:id="@+id/navPrivacyPolicy"
    android:title="@string/privacyPolicy"
   android:visible="true"
   app:showAsAction="ifRoom"/>

  <item android:id="@+id/navContact"
    android:title="@string/contactUs"
   android:visible="true"
   app:showAsAction="ifRoom"/>

</menu>